[package]
name = "agentwarden"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A miniature AI-agent tool-call policy gate: allow/deny/ask for proposed commands against a hot-reloadable policy."
license = "MIT"
readme = "README.md"
keywords = ["ai-agents", "policy", "security", "axum"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
constant_time_eq = "0.5.0"
globset = "0.4.18"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "fs", "time", "signal"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

[dev-dependencies]
mockall = "0.14.0"
tower = { version = "0.5.3", features = ["util"] }
